syntax = "proto3";

option csharp_namespace = "Library.Contracts";

package library;

service LibraryService {
  rpc GetMostBorrowedBooks (Empty) returns (BookListResponse);
  rpc GetBookAvailability (BookIdRequest) returns (AvailabilityResponse);
  rpc GetTopBorrowers (DateRangeRequest) returns (UserListResponse);
  rpc GetUserBorrowHistory (UserPeriodRequest) returns (BookListResponse);
  rpc GetAlsoBorrowedBooks (BookIdRequest) returns (BookListResponse);
  rpc GetReadingRate (BookIdRequest) returns (ReadingRateResponse);
}

message Empty {}

message BookIdRequest {
  int32 bookId = 1;
}

message DateRangeRequest {
  string startDate = 1;
  string endDate = 2;
}

message UserPeriodRequest {
  int32 userId = 1;
  string startDate = 2;
  string endDate = 3;
}

message BookResponse {
  int32 id = 1;
  string title = 2;
  int32 borrowCount = 3;
}

message BookListResponse {
  repeated BookResponse books = 1;
}

message AvailabilityResponse {
  int32 totalCopies = 1;
  int32 borrowedCopies = 2;
  int32 availableCopies = 3;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  int32 borrowCount = 3;
}

message UserListResponse {
  repeated UserResponse users = 1;
}

message ReadingRateResponse {
  float pagesPerDay = 1;
}
